--- a/app/src/main/res/values/configs.xml
+++ b/app/src/main/res/values/configs.xml
@@ -6,24 +6,24 @@
 
 
     <!--mobihelp config-->
-    <string name="mobihelp_config_domain">https://yileapp.freshdesk.com</string>
+    <string name="mobihelp_config_domain">https://wisape.freshdesk.com</string>
     <string name="mobihelp_config_appId">linkoak-1-e0f97e44ca6c57140bf56a58cafac1cf</string>
     <string name="mobihelp_config_appSecret">09c3cfbb5eca54b4beea0f84876be17f5b83bfec</string>
 
-    <string name="facebook_api_key">846379558782294</string>
-    <string name="facebook_api_secret_key">9d13b8fbc615255da5c65b2b2e99943f</string>
-    <string name="facebook_api_callback_uri">http://www.linkoak.com/</string>
+    <string name="facebook_api_key">900883746624807</string>
+    <string name="facebook_api_secret_key">3c4d60f743ca8b81b40bbe73d7120e45</string>
+    <string name="facebook_api_callback_uri">http://www.wisape.com/</string>
 
     <string name="twitter_api_key">JACxsadE96iElPPJPItTm8pwv</string>
     <string name="twitter_api_secret_key">x6UqsXX84bKN5GecWnOeKPknVY2KPv5mpcXH3fsJbtshJ9BNoW</string>
-    <string name="twitter_api_callback_uri">http://www.linkoak.com/</string>
+    <string name="twitter_api_callback_uri">http://www.wisape.com/</string>
 
     <string name="googleplus_api_key">521918476593-fgrroud61bgbp51hpbbgu18q9h1h5ut0.apps.googleusercontent.com</string>
     <string name="googleplus_api_secret_key">e0QE2lQvYRKf5h-8GFMx5WjR</string>
-    <string name="googleplus_api_callback_uri">http://www.linkoak.com/oauth2callback</string>
+    <string name="googleplus_api_callback_uri">http://www.wisape.com/oauth2callback</string>
 
     <string name="wechat_api_key">wxe4678527750c9b24</string>
     <string name="wechat_api_secret_key">6935bd1aac95b7833829a1b91c31a749</string>
-    <string name="wechat_api_callback_uri">www.linkoak.com</string>
+    <string name="wechat_api_callback_uri">www.wisape.com</string>
 
 </resources>
