--- a/app/src/main/res/values/configs.xml
+++ b/app/src/main/res/values/configs.xml
@@ -12,19 +12,20 @@
 
     <string name="facebook_api_key">900883746624807</string>
     <string name="facebook_api_secret_key">3c4d60f743ca8b81b40bbe73d7120e45</string>
-    <string name="facebook_api_callback_uri">http://localhost</string>
+    <string name="facebook_api_callback_uri">http://www.wisape.com/</string>
 
-    <string name="twitter_api_key">JACxsadE96iElPPJPItTm8pwv</string>
-    <string name="twitter_api_secret_key">x6UqsXX84bKN5GecWnOeKPknVY2KPv5mpcXH3fsJbtshJ9BNoW</string>
-    <string name="twitter_api_callback_uri">http://localhost</string>
+    <string name="twitter_api_key">Qzjiy8jHRAm5G5aulx0jqJXEw</string>
+    <string name="twitter_api_secret_key">0BIpBKr7x8ci20bSmZND7FavvRNV1Y0qQ0LHj6nrYwRSF6wN5s</string>
+    <string name="twitter_api_callback_uri">http://www.wisape.com/</string>
 
     <string name="googleplus_api_key_debug">79156317172-cpinejp27ccjndpeqsjllfut5er5f3ds.apps.googleusercontent.com</string>
     <string name="googleplus_api_key">79156317172-p7itv4v8f64sk4kl6clh3s736ar12ho6.apps.googleusercontent.com</string>
     <string name="googleplus_api_secret_key">AIzaSyBJ9--O7vZVxfOAwlcXV-3zc7fX57Vz3x4</string>
     <string name="googleplus_api_callback_uri">urn:ietf:wg:oauth:2.0:oob</string>
 
-
-    <string name="wechat_api_key">wx95e5a7049774a0cd</string>
-    <string name="wechat_api_secret_key">cabf7fbf4ccbd13306aab4c6e2dfff37</string>
+    <string name="wechat_official_accounts_api_key">wx95e5a7049774a0cd</string>
+    <string name="wechat_official_accounts_api_secret_key">cabf7fbf4ccbd13306aab4c6e2dfff37</string>
+    <string name="wechat_open_platform_api_key"></string>
+    <string name="wechat_open_platform_api_secret_key"></string>
     <string name="wechat_api_callback_uri">http://localhost</string>
 </resources>
