--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppActionBar" parent="Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="displayOptions">homeAsUp|showHome|showTitle</item>
+        <item name="elevation">0dp</item>
+        <item name="homeAsUpIndicator">@mipmap/icon_back</item>
     </style>
 
     <style name="HorizontalLine" parent="">
