--- a/app/src/main/res/layout/layout_photo_bucket.xml
+++ b/app/src/main/res/layout/layout_photo_bucket.xml
@@ -2,16 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?android:attr/windowBackground">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/imgv_bucket_thumb"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         app:failureImage="@mipmap/ic_launcher"
+        app:placeholderImage="@mipmap/ic_launcher"
+        app:actualImageScaleType="center"
         />
 
     <com.wisape.android.view.TextView
@@ -19,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:textColor="@android:color/black"
         android:layout_toEndOf="@+id/imgv_bucket_thumb"
         android:layout_toRightOf="@+id/imgv_bucket_thumb"/>
 
@@ -27,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:textColor="@android:color/black"
         android:layout_toEndOf="@+id/imgv_bucket_thumb"
         android:layout_toRightOf="@+id/imgv_bucket_thumb"/>
 
