--- a/app/src/main/res/menu/photo_backets.xml
+++ b/app/src/main/res/menu/photo_backets.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/switch_to_buckets"
-        android:title="@string/photo_to_buckets"
-        android:icon="@mipmap/icon_selector_photos"
+        android:id="@+id/photo_buckets"
+        android:title="@string/photo_menu_buckets"
+        android:icon="@mipmap/icon_selector_buckets"
         app:showAsAction="always"/>
 </menu>
