--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="app_secondary">#1fbc1b</color>
 
     <color name="app_tertiary">#666666</color>
+    <color name="app_fourth">#000000</color>
 
 </resources>
