--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,11 @@
         <item name="displayOptions">homeAsUp|showHome|showTitle</item>
         <item name="elevation">0dp</item>
         <item name="homeAsUpIndicator">@mipmap/icon_back</item>
+        <item name="titleTextStyle">@style/AppActionBar.TitleStyle</item>
+    </style>
+    
+    <style name="AppActionBar.TitleStyle" parent="">
+        <item name="android:textColor">@color/app_fourth</item>
     </style>
 
     <style name="HorizontalLine" parent="">
