--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -61,7 +61,7 @@
     <TextView
         android:id="@+id/about_Linkoak"
         style="@style/MenuListItemStyle"
-        android:text="@string/about_Linkoak" />
+        android:text="@string/about_label" />
 
 
     <!--login out-->
