--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -13,11 +13,20 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="39dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="QR Code"
+        android:id="@+id/qr_code"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/button"
+        android:layout_marginTop="13dp" />
+
     <com.facebook.drawee.view.SimpleDraweeView
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:id="@+id/imageView"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/qr_code"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="51dp"/>
 </RelativeLayout>
