--- a/app/src/main/res/layout/fragment_card_gallery.xml
+++ b/app/src/main/res/layout/fragment_card_gallery.xml
@@ -25,7 +25,7 @@
                 android:layout_width="18dp"
                 android:layout_height="12dp"
                 android:layout_centerInParent="true"
-                android:background="@mipmap/menu_switch_bg" />
+                android:background="@drawable/menu_switch_bg" />
         </RelativeLayout>
 
         <TextView
