--- a/app/src/main/res/layout/layout_main_view_card_item.xml
+++ b/app/src/main/res/layout/layout_main_view_card_item.xml
@@ -44,7 +44,7 @@
                     android:layout_height="14dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:background="@mipmap/more_button" />
+                    android:background="@drawable/more_button" />
             </RelativeLayout>
         </RelativeLayout>
 
