--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,28 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/sign_up_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/sign_up_bg">
 
+    <ImageView
+        android:id="@+id/sign_up_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
+        android:src="@drawable/icon_logo_large"
+        android:scaleType="center"/>
 
-    <com.wisape.android.view.SignUpEditText
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sign_up_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="18dp"
+        android:src="@drawable/icon_logo_character"
+        android:scaleType="center"/>
+
+
+    <com.wisape.android.widget.SignUpEditText
         android:id="@+id/sign_up_email"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         app:sign_up_icon="@drawable/sign_up_icon_email"
-        app:action="@drawable/icon_edit_clear"/>
+        app:action="@drawable/icon_edit_clear_selector"
+        app:icon_paddingEnd="9dp"
+        app:show_error="false"
+        android:inputType="text"/>
 
-    <com.wisape.android.view.SignUpEditText
+    <com.wisape.android.widget.SignUpEditText
         android:id="@+id/sign_up_password"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="58dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/sign_up_email"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         app:sign_up_icon="@drawable/sign_up_icon_password"
-        app:action="@drawable/icon_password_visibility"/>
+        app:action="@drawable/icon_password_visibility"
+        app:icon_paddingEnd="9dp"
+        app:show_error="true"
+        app:warning_icon="@drawable/icon_warning"
+        app:warning_icon_paddingEnd="9dp"
+        app:warning_textStyle="@style/SignUp.Warning"
+        android:inputType="textPassword"/>
+
+    <Button
+        android:id="@+id/sign_up_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/sign_up_password"
+        android:text="@string/sign_up_btn"/>
+
+    <TextView
+        android:id="@+id/sign_in_forget_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:layout_marginTop="8dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/sign_up_btn"
+        android:text="@string/forget_password"/>
+
+    <ImageView
+        android:id="@+id/sign_up_with_twitter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/sign_in_forget_password"
+        android:src="@drawable/connect_twitter_selector"
+        android:scaleType="center"
+        android:gravity="center"/>
+
+    <ImageView
+        android:id="@+id/sign_up_with_facebook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/connect_facebook_selector"
+        android:scaleType="center"
+        android:gravity="center"
+        android:layout_alignTop="@+id/sign_up_with_twitter"
+        android:layout_toLeftOf="@+id/sign_up_with_twitter"
+        android:layout_toStartOf="@+id/sign_up_with_twitter"
+        android:layout_marginEnd="17dp"
+        android:layout_marginRight="17dp"/>
+
+    <ImageView
+        android:id="@+id/sign_up_with_google_plus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/connect_googleplus_selector"
+        android:scaleType="center"
+        android:gravity="center"
+        android:layout_alignTop="@+id/sign_up_with_twitter"
+        android:layout_toRightOf="@+id/sign_up_with_twitter"
+        android:layout_toEndOf="@+id/sign_up_with_twitter"
+        android:layout_marginStart="17dp"
+        android:layout_marginLeft="17dp"/>
 </RelativeLayout>
