--- a/app/src/main/res/layout/layout_signup_edittext.xml
+++ b/app/src/main/res/layout/layout_signup_edittext.xml
@@ -4,16 +4,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/signup_edit"
+    <view
+        class="com.wisape.android.widget.SignUpEditText$InnerEditText"
+        android:id="@+id/edit_text"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:inputType="textPassword"/>
+        />
 
     <TextView
-        android:id="@+id/signup_warning"
+        android:id="@+id/warning_text"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:visibility="invisible"
+        />
 </merge>
