--- a/app/src/main/res/xml/config.xml
+++ b/app/src/main/res/xml/config.xml
@@ -5,6 +5,8 @@
     <access origin="*"/>
 
     <preference name="loglevel" value="DEBUG" />
+    <preference name="Orientation" value="portrait"/>
+    <preference name="AndroidPersistentFileLocation" value="Compatibility" />
 
     <feature name="PhotoSelector">
         <param name="android-package" value="com.wisape.android.cordova.PhotoSelectorPlugin"/>
