--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,16 +11,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="60dp"
         android:src="@drawable/icon_logo_large"
         android:scaleType="center"/>
 
     <ImageView
+        android:id="@+id/sign_up_logo_character"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/sign_up_logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/icon_logo_character"
         android:scaleType="center"/>
 
@@ -28,7 +29,7 @@
     <com.wisape.android.widget.SignUpEditText
         android:id="@+id/sign_up_email"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginRight="20dp"
@@ -38,18 +39,23 @@
         app:sign_up_icon="@drawable/sign_up_icon_email"
         app:action="@drawable/icon_edit_clear_selector"
         app:icon_paddingEnd="9dp"
-        app:show_error="false"
+        app:show_error="true"
+        app:warning_icon="@drawable/icon_warning"
+        app:warning_icon_paddingEnd="9dp"
+        app:warning_textStyle="@style/SignUp.Warning"
+        app:edit_background="@drawable/sign_up_edit_bg_normal"
+        app:edit_height="40dp"
+        app:warning_height="24dp"
         android:inputType="text"/>
 
     <com.wisape.android.widget.SignUpEditText
         android:id="@+id/sign_up_password"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
         android:layout_below="@+id/sign_up_email"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -60,61 +66,73 @@
         app:warning_icon="@drawable/icon_warning"
         app:warning_icon_paddingEnd="9dp"
         app:warning_textStyle="@style/SignUp.Warning"
+        app:edit_background="@drawable/sign_up_edit_bg_normal"
+        app:edit_height="40dp"
+        app:warning_height="24dp"
         android:inputType="textPassword"/>
 
     <Button
         android:id="@+id/sign_up_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/sign_up_password"
+        android:background="@drawable/sign_up_btn_bg"
         android:text="@string/sign_up_btn"/>
 
     <TextView
-        android:id="@+id/sign_in_forget_password"
+        android:id="@+id/sign_up_forget_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:layout_marginTop="8dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/sign_up_btn"
+        android:textColor="@color/app_primary"
         android:text="@string/forget_password"/>
 
-    <ImageView
+    <ImageButton
         android:id="@+id/sign_up_with_twitter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/sign_in_forget_password"
-        android:src="@drawable/connect_twitter_selector"
+        android:layout_below="@+id/sign_up_forget_password"
+        android:src="@drawable/sign_up_with_twitter_selector"
         android:scaleType="center"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:background="@android:color/transparent"/>
 
-    <ImageView
+    <ImageButton
         android:id="@+id/sign_up_with_facebook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/connect_facebook_selector"
+        android:src="@drawable/sign_up_with_facebook_selector"
         android:scaleType="center"
         android:gravity="center"
         android:layout_alignTop="@+id/sign_up_with_twitter"
         android:layout_toLeftOf="@+id/sign_up_with_twitter"
         android:layout_toStartOf="@+id/sign_up_with_twitter"
         android:layout_marginEnd="17dp"
-        android:layout_marginRight="17dp"/>
+        android:layout_marginRight="20dp"
+        android:background="@android:color/transparent"/>
 
-    <ImageView
+    <ImageButton
         android:id="@+id/sign_up_with_google_plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/connect_googleplus_selector"
+        android:src="@drawable/sign_up_with_google_plus_selector"
         android:scaleType="center"
         android:gravity="center"
         android:layout_alignTop="@+id/sign_up_with_twitter"
         android:layout_toRightOf="@+id/sign_up_with_twitter"
         android:layout_toEndOf="@+id/sign_up_with_twitter"
         android:layout_marginStart="17dp"
-        android:layout_marginLeft="17dp"/>
+        android:layout_marginLeft="20dp"
+        android:background="@android:color/transparent"/>
 </RelativeLayout>
