--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,7 @@
         <item name="android:textColorSecondary">@color/app_primary</item>
         <item name="android:textColorTertiary">@color/app_primary</item>
 
+        <item name="signUpTextCursorDrawable">@null</item>
     </style>
     <style name="AppTheme.NoActionBar" parent="AppTheme">
         <item name="android:windowActionBar">false</item>
