--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="photo_selector_animation_duration">400</integer>
+    <integer name="cordova_tag_key">101</integer>
 </resources>
