--- a/app/src/main/assets/www/views/editor_index.html
+++ b/app/src/main/assets/www/views/editor_index.html
@@ -45,8 +45,7 @@
     <div html-include="story_setting.html"></div>
     <script>
         document.addEventListener("deviceready", function(){
-            console.log(cordova.file);
-            console.log(window.requestFileSystem);
+            console.log(File);
         }, false);
         /*
         var LocalFileSystem = new Object();
