--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,10 @@
         <item name="titleTextStyle">@style/AppActionBar.TitleStyle</item>
     </style>
     
+    <style name="AppActionBar.Transparent" parent="AppActionBar">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+    
     <style name="AppActionBar.TitleStyle" parent="TextAppearance.AppCompat.Medium.Inverse">
         <item name="android:textColor">@color/app_fourth</item>
     </style>
