--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,4 +23,9 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    
+    <style name="AppTheme.Transparent" parent="AppTheme">
+        <item name="actionBarStyle">@style/AppActionBar.Transparent</item>
+        <item name="windowActionBarOverlay">true</item>
+    </style>
 </resources>
