--- a/app/src/main/res/values/configs.xml
+++ b/app/src/main/res/values/configs.xml
@@ -32,4 +32,8 @@
     <string name="wechat_open_platform_api_key"></string>
     <string name="wechat_open_platform_api_secret_key"></string>
     <string name="wechat_api_callback_uri">http://localhost</string>
+
+    <string-array name="player_mode">
+        <item>MODE_LOOP</item>
+    </string-array>
 </resources>
