--- a/app/src/main/res/layout/fragment_card_gallery.xml
+++ b/app/src/main/res/layout/fragment_card_gallery.xml
@@ -10,16 +10,16 @@
         android:layout_height="match_parent"
         android:scaleType="fitStart" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/head_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:layout_height="50dp">
 
         <RelativeLayout
             android:id="@+id/menu_switch"
             android:layout_width="50dp"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true">
 
             <ImageView
                 android:layout_width="18dp"
@@ -28,14 +28,34 @@
                 android:background="@drawable/menu_switch_bg" />
         </RelativeLayout>
 
-        <TextView
-            android:layout_width="200dp"
+
+        <RelativeLayout
+            android:id="@+id/info_board"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
+            android:layout_alignParentRight="true">
+
+            <ImageView
+                android:id="@+id/gift"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_gravity="left"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/gift" />
+        </RelativeLayout>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@id/info_board"
+            android:layout_toRightOf="@id/menu_switch"
             android:gravity="center_vertical"
             android:text="@string/all_stores"
             android:textColor="@color/app_primary"
             android:textSize="@dimen/app_text_size_xlarge" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <com.wisape.android.view.GalleryView
         android:id="@+id/card_gallery"
