--- a/app/src/main/res/drawable/sign_up_edit_bg_normal.xml
+++ b/app/src/main/res/drawable/sign_up_edit_bg_normal.xml
@@ -4,7 +4,7 @@
         <layer-list>
             <item android:top="50dp">
                 <shape>
-                    <solid android:color="@color/theme_primary_warning"/>
+                    <solid android:color="@color/app_fifth"/>
                     <size android:width="10000dp" android:height="1dp"/>
                 </shape>
             </item>
