--- a/app/src/main/res/layout/layout_story_music_entity.xml
+++ b/app/src/main/res/layout/layout_story_music_entity.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/story_music_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <TextView
+        style="@style/App.TextStyle.Primary"
         android:id="@+id/story_music_title_txtv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="left|start|center_vertical"
         android:gravity="left|start|center_vertical"
-        android:layout_weight="1"
-        android:singleLine="true"
-        android:textColor="@color/app_fourth"/>
+        android:layout_weight="1" />
 
     <FrameLayout
         android:layout_width="80dp"
@@ -35,21 +33,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right|end|center_vertical"
-            android:maxHeight="4dp"
+            android:indeterminate="false"
+            android:background="@color/app_primary_transparent_10p"
+            android:progressDrawable="@drawable/story_music_progress_horizontal"
+            android:maxHeight="5dp"
+            android:minHeight="5dp"
             android:max="100" />
-
-        <!--
-        <com.yile.duorey.widget.PlayerStatusView
-            android:id="@+id/story_music_player_status"
-            android:layout_width="26dp"
-            android:layout_height="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:padding="3dp"
-            android:visibility="invisible"
-            app:gapWidth="2dp"
-            app:itemColor="@color/app_secondary"
-            app:itemWidth="3.5dp" />
-         -->
     </FrameLayout>
 </LinearLayout>
